# onlinetlabs

./: .env  .env.example  .env.prod  .gitattributes  .gitignore  AUTH.md  README.md  TODO.txt  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml
backend/: .env  lab
backend/database/: init.sql
backend/lab/: Dockerfile  config.ini  dependencies.json  install_devices.py  requirements.txt  start.sh  unzip_devices.sh
backend/lab_gns3_2.2.51/: import_labs.py
backend/lab_gns3_3.0.2/: start.sh  (+3 more)
client/: .eslintcache  .eslintrc.cjs  .gitignore  .prettierrc  Dockerfile  README.md  next.config.mjs  package.json  pnpm-lock.yaml  prepare.cjs  tsconfig.json
docker/: frontend.dockerfile  lab.dockerfile  nginx.conf
frontend/: .env  .eslintrc.json  .gitignore  auth.ts  components.json  contentlayer.config.js  contentlayer.config.ts  environment.d.ts  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.cjs  puppeteer.config.json  tailwind.config.ts  tsconfig.json  tsconfig.scripts.json  vercel.json
scripts/: docker_build_interrupt.sh  docker_delete.sh  docker_deploy.sh  docker_images_delete.sh  docker_start.sh  docker_stop.sh  update.sh
server/: AUTH.md  Dockerfile  requirements.txt
src/server/utils/elogger/: TODO.txt  pyproject.toml
src/server/utils/elogger/src/elogger/: __init__.py  main.py
src/server/utils/elogger/src/elogger/utils/: additional.py
src/server/utils/elogger/tests/: test_01_logger_dependencies.py  test_02_logger_is_singleton.py  test_03_logger_defalt_sink.py  test_05_logger_envs.py
(+494 files in other folders)
